--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 node_modules
 /dist
 
-
 # local env files
 .env.local
 .env.*.local
@@ -25,5 +24,7 @@ pnpm-debug.log*
 firebase-debug.log
 firestore.indexes.json
 firestore.rules
+.firebaserc
+firebase.json
 
 .env
